--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "consign": "^0.1.6",
     "express": "^4.15.4",
     "memcached": "^2.2.2",
+    "morgan": "^1.9.0",
     "mysql": "^2.14.1",
     "winston": "^2.4.0"
   }
