--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.0",
+    "cluster": "^0.7.7",
     "consign": "^0.1.6",
     "express": "^4.15.4",
     "memcached": "^2.2.2",
